--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Penguins!</title>
     <link rel="shortcut icon" type="image/png" href=" /favicon.png">
     <link rel="shortcut icon" type="image/x-icon" href=" /favicon.ico">
-    <link href=" /feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Penguins! Full Atom Feed" />
+    <link href="feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Penguins! Full Atom Feed" />
     <link rel="stylesheet" href=" /theme/css/screen.css" type="text/css" />
     <link rel="stylesheet" href=" /theme/css/pygments.css" type="text/css" />
     <link rel="stylesheet" href=" /theme/css/print.css" type="text/css" media="print" />
